// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Body1 Given no text When rendering Then match snapshot 1`] = `
<span
  className="sc-bczRLJ dqVkrV"
/>
`;

exports[`Body1 Given text When rendering Then match snapshot 1`] = `
<span
  className="sc-bczRLJ dqVkrV"
>
  some text
</span>
`;
